...

    render() {
        const { isLoading } = this.props;

        return (
            <DatePicker
                testID='datepicker'
                mode={'date'}
                activeOpacity={1}
                format={'MMMM DD, YYYY'}
                style={Style.calendar}
                date={this.state.date}
                disabled={isLoading}
                cancelBtnText={'Cancel'}
                confirmBtnText={'Confirm'}
                maxDate={moment().subtract(1, 'day').format('MMMM DD, YYYY')}
                placeholder={'Select date'}
                iconComponent={this.customCalendarIcon()}
                customStyles={{
                    dateInput: Style.calendarInput,
                    dateIcon: Style.calendarIcon,
...
